--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amadeus": "^10.1.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "express": "^4.21.1",
     "netlify-cli": "^17.37.0",
