--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.21.1",
     "netlify-cli": "^17.37.0",
     "netlify-lambda": "^2.0.16",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.7",
     "qs": "^6.13.0",
+    "request": "^2.88.2",
     "serverless-http": "^3.2.0",
     "wft-geodb-js-client": "^2.0.3"
   }
