--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
